EPMRPP-36489 LogItemDetails. Fix text overlapping

--- a/app/src/pages/inside/logsPage/logItemInfo/logItemDetails/logItemDetails.scss
+++ b/app/src/pages/inside/logsPage/logItemInfo/logItemDetails/logItemDetails.scss
@@ -23,12 +23,19 @@
 
 .body-column {
   width: 45%;
+  padding-right: 12px;
+  box-sizing: border-box;
+
+  @media (max-width: $SCREEN_XS_MAX) {
+    padding: 0;
+  }
 }
 
 .name {
   font: 14px $FONT-SEMIBOLD;
   color: $COLOR--charcoal-grey;
   margin-bottom: 14px;
+  overflow-wrap: break-word;
 }
 
 .attributes {
